--- a/home.css
+++ b/home.css
@@ -314,3 +314,13 @@ header {
     border: 1px solid grey;
     padding: 10px;
   }
+
+.image-container {
+    display: flex;
+  }
+  
+  .image {
+    width: 200px; /* Set the desired width */
+    height: 200px; /* Set the desired height */
+    object-fit: cover; /* Adjust how the image fits into the container */
+  }
